# fanllm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
fanllm/: cli.py
fanllm/providers/: xai.py
